public/less/chat/ChatPanel.less
@import './../variables.less';

.chat-panel {
  //position: absolute;
  bottom: 0px;
  margin-right: 20px;
  box-shadow: 0px 0px 10px #aaa;
  visibility: visible;
  position: relative;
  display: block;
  float: left;
  width: 300px;
  height: 320px;
  z-index: 2;

  .chat-panel-background-wrapper {
    //height: 68px;
    overflow: hidden;
    position: absolute;
    display: block;
    top: 0px;
    left: 0px;
    width: 300px;
    height: 30px;
    .chat-panel-background-image {
      border-color: rgba(0,0,0,0);
      background-repeat: no-repeat;
      background-position: center;
      background-size: 200%;
      height: 200%;
      width: 100%;
      top: 0px;
      position: absolute;
      filter: blur(10px);
    }
  }

  .chat-panel-header {
    background-color: #666;
    padding: 0px 10px;
    height: 30px;
    .chat-panel-head {
      display: flex;
      align-items: center;
      justify-content: space-between;
      width: 100%;
      height: 100%;
      .bevy-name {
        z-index: 1;
        color: #fff;
        text-align: left;
        text-shadow: 0px 0px 5px rgba(0,0,0,.5);
        height: 100%;
        overflow: hidden;
        width: 100%;
        display: flex;
        align-items: center;
        &:hover, &:focus, &:active {
          text-decoration: none;
          color: #e6e6e6;
        }
      }
      .actions {
        display: flex;
        flex-direction: row;
        align-items: center;
        .settings-btn-group {
          .settings-btn {
            border-radius: 0px;
            padding: 0;
            background-color: transparent;
            color: #fff;
            border: none;
            height: 30px;
            padding: 0px 7px;
            &:hover, &.open {
              color: #ddd;
            }
            &:active, &:focus {
              box-shadow: none;
            }
            span.glyphicon.glyphicon-cog {
              line-height: inherit;
            }
          }
        }
        .close-btn {
          background-color: transparent;
          border: none;
          padding: 0px 5px;
          height: 30px;
          color: #fff;
          &:active, &:focus {
            color: #ddd;
            background-color: transparent;
            box-shadow: none;
          }
          span.glyphicon.glyphicon-remove {
            line-height: inherit;
            color: #fff;
            &:hover, &:active, &:focus {
              color: #ddd;
            }
          }
        }
      }
    }
  }

  .collapsing, .collapse.in {
    display: flex;
    flex-direction: row;
    background-color: #fff;
    border-bottom: 1px solid #ddd;
    .add-users-container {
      display: flex;
      flex-direction: row;
      width: 100%;
    }
    .add-users {
      flex: 1;
      display: flex;
      flex-direction: row;
      flex-wrap: wrap;
      padding: 0px 5px;
      padding-top: 5px;
      .to-text {
        margin-bottom: 5px;
        margin-right: 5px;
        color: @light-font;
      }
      .added-user {
        height: 20px;
        display: flex;
        flex-direction: row;
        align-items: center;
        background-color: #666;
        border-radius: 3px;
        padding: 0px 5px;
        margin-bottom: 5px;
        margin-right: 5px;
        span.display-name {
          font-size: 12px;
          color: #fff;
          margin-right: 5px;
        }
        .remove-btn {
          background-color: transparent;
          border: none;
          padding: 0px 0px;
          font-size: 12px;
          &:hover {
            background-color: transparent;
            box-shadow: none;
          }
          &:active, &:focus {
            background-color: transparent;
            box-shadow: none;
          }
          .glyphicon.glyphicon-remove {
            color: #fff;
          }
        }
      }
      .form-group.participant-input {
        display: flex;
        flex: 1;
        min-width: 50px;
        margin-bottom: 5px;
        input.form-control {
          flex: 1;
          border: none;
          background-color: transparent;
          min-width: 50px;
          height: 20px;
          border-radius: 0px;
          transition: none;
          box-shadow: none;
          padding: 4px 0px;
          font-size: 12px;
        }
      }
    }
    .edit-name {
      width: 100%;
      display: flex;
      flex-direction: row;
      align-items: center;
      .form-group.edit-name-input {
        display: flex;
        flex: 1;
        min-width: 50px;
        margin-bottom: 0px;
        padding: 0px 5px;
        input.form-control {
          flex: 1;
          border: 1px solid #ddd;
          background-color: transparent;
          min-width: 50px;
          height: 24px;
          border-radius: 0px;
          transition: none;
          box-shadow: none;
          padding: 4px;
          font-size: 12px;
        }
      }
    }
    .done-btn {
      height: 24px;
      margin: 3px 0px;
      padding: 0px 6px;
      margin-right: 5px;
      border: none;
      background-color: #666;
      color: #fff;
      &:active, &:focus {
        box-shadow: none;
      }
    }
  }

  .chat-panel-body {
    background-color: #eee;
    height: 290px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    .user-search-overlay {
      top: 55px !important;
    }
    .chat-panel-input {
      background-color: #fff;
      width: 100%;
      overflow-x: hidden;
      .chat-text-field {
        .form-group {
          margin-bottom: 0px;
          input {
            border-radius: 0px;
            border: 1px solid #ccc;
            &:focus, &:active {
              border: 1px solid #ccc;
              box-shadow: none;
            }
          }
        }
      }
    }
  }
}

